--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">
-  <meta name="author" content="Creative Tim">
-  <title>Argon Dashboard Angular - Free Dashboard for Bootstrap 4</title>
+  <meta name="description" content="Login app for dummy sitw">
+  <meta name="author" content="Connor Becker">
+  <title>Login App</title>
   <!-- Favicon -->
   <link href="./assets/img/brand/favicon0.png" rel="icon" type="image/png">
   <!-- Fonts -->
@@ -33,6 +33,7 @@
   <link href="./assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
 
+  <!-- TODO: Google API -->
   <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE"></script>
 
 </head>
