Remove unused stuff

--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
   <meta charset="utf-8">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Login app for dummy sitw">
+  <meta name="description" content="Finance App">
   <meta name="author" content="Connor Becker">
-  <title>Login App</title>
+  <title>Finance App</title>
   <!-- Favicon -->
   <link href="./assets/img/brand/logoipsum-icon.svg" rel="icon" type="image/png">
   <!-- Fonts -->
